package ProtobufLineFormat;
message MetaData {
  enum Type {
    REQUEST = 1;
    RESPONSE = 2;
  };
  required Type type = 1;
  required uint64 identify = 2;
  // the request should bring the response identify.
  optional uint64 response_identify = 3;

  required bytes content = 4;
};
